--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -636,6 +636,7 @@ img {
 }
 
 .swiper-logo-slider {
+    overflow: hidden;
     .swiper-wrapper {
         transition-timing-function: linear !important;
     }
