--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -641,3 +641,13 @@ img {
         transition-timing-function: linear !important;
     }
 }
+
+.gradient-overlay {
+    mask-image: linear-gradient(
+        90deg,
+        rgba(0, 0, 0, 0) 0%,
+        /* Fully transparent */ rgba(0, 0, 0, 1) 20%,
+        /* Fully opaque */ rgba(0, 0, 0, 1) 80%,
+        /* Fully opaque */ rgba(0, 0, 0, 0) 100% /* Fully transparent */
+    );
+}
