--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -639,15 +639,13 @@ img {
     overflow: hidden;
     .swiper-wrapper {
         transition-timing-function: linear !important;
+        img {
+            height: 80px;
+            width: auto;
+        }
     }
 }
 
 .gradient-overlay {
-    mask-image: linear-gradient(
-        90deg,
-        rgba(0, 0, 0, 0) 0%,
-        /* Fully transparent */ rgba(0, 0, 0, 1) 20%,
-        /* Fully opaque */ rgba(0, 0, 0, 1) 80%,
-        /* Fully opaque */ rgba(0, 0, 0, 0) 100% /* Fully transparent */
-    );
+    mask-image: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, /* Fully transparent */ rgba(0, 0, 0, 1) 20%, /* Fully opaque */ rgba(0, 0, 0, 1) 80%, /* Fully opaque */ rgba(0, 0, 0, 0) 100% /* Fully transparent */);
 }
