--- a/style.css
+++ b/style.css
@@ -11795,6 +11795,9 @@ img {
   overflow: hidden; }
   .swiper-logo-slider .swiper-wrapper {
     transition-timing-function: linear !important; }
+    .swiper-logo-slider .swiper-wrapper img {
+      height: 80px;
+      width: auto; }
 
 .gradient-overlay {
   mask-image: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, black 20%, black 80%, rgba(0, 0, 0, 0) 100%); }
