--- a/style.css
+++ b/style.css
@@ -11795,6 +11795,9 @@ img {
   overflow: hidden; }
   .swiper-logo-slider .swiper-wrapper {
     transition-timing-function: linear !important; }
+    .swiper-logo-slider .swiper-wrapper .swiper-slide {
+      padding-left: 1vw;
+      padding-right: 1vw; }
     .swiper-logo-slider .swiper-wrapper img {
       height: 80px;
       width: auto; }
