--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -642,6 +642,7 @@ img {
         .swiper-slide {
             padding-left: 1vw;
             padding-right: 1vw;
+            width: auto;
         }
         img {
             height: 80px;
