--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -640,8 +640,10 @@ img {
     .swiper-wrapper {
         transition-timing-function: linear !important;
         .swiper-slide {
-            padding-left: 1vw;
-            padding-right: 1vw;
+            > div {
+                padding-left: 1vw;
+                padding-right: 1vw;
+            }
             width: var(--width) !important;
         }
         img {
@@ -652,5 +654,11 @@ img {
 }
 
 .gradient-overlay {
-    mask-image: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, /* Fully transparent */ rgba(0, 0, 0, 1) 20%, /* Fully opaque */ rgba(0, 0, 0, 1) 80%, /* Fully opaque */ rgba(0, 0, 0, 0) 100% /* Fully transparent */);
+    mask-image: linear-gradient(
+        90deg,
+        rgba(0, 0, 0, 0) 0%,
+        /* Fully transparent */ rgba(0, 0, 0, 1) 20%,
+        /* Fully opaque */ rgba(0, 0, 0, 1) 80%,
+        /* Fully opaque */ rgba(0, 0, 0, 0) 100% /* Fully transparent */
+    );
 }
