--- a/style.css
+++ b/style.css
@@ -11797,7 +11797,8 @@ img {
     transition-timing-function: linear !important; }
     .swiper-logo-slider .swiper-wrapper .swiper-slide {
       padding-left: 1vw;
-      padding-right: 1vw; }
+      padding-right: 1vw;
+      width: var(--width) !important; }
     .swiper-logo-slider .swiper-wrapper img {
       height: 80px;
       width: auto; }
