--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -668,6 +668,27 @@ img {
         position: static;
         transition: none;
         width: 100%;
-        justify-content: center;    
+        justify-content: center;
+    }
+}
+
+.swiper-slider-timeline {
+    .swiper-slide {
+        &.swiper-slide-active {
+            .entry-content {
+                @include responsive(md-lg) {
+                    margin-right: -30%;
+                }
+            }
+        }
+        &:not(.swiper-slide-active) {
+            opacity: 0.7;
+            .wp-block-post-title {
+                opacity: 0;
+            }
+            .entry-content {
+                opacity: 0;
+            }
+        }
     }
 }
