--- a/style.css
+++ b/style.css
@@ -11813,6 +11813,16 @@ img {
   width: 100%;
   justify-content: center; }
 
+@media screen and (min-width: 992px) {
+  .swiper-slider-timeline .swiper-slide.swiper-slide-active .entry-content {
+    margin-right: -30%; } }
+.swiper-slider-timeline .swiper-slide:not(.swiper-slide-active) {
+  opacity: 0.7; }
+  .swiper-slider-timeline .swiper-slide:not(.swiper-slide-active) .wp-block-post-title {
+    opacity: 0; }
+  .swiper-slider-timeline .swiper-slide:not(.swiper-slide-active) .entry-content {
+    opacity: 0; }
+
 @media (min-width: 1500px) {
   .container {
     max-width: 1420px; } }
