--- a/style.css
+++ b/style.css
@@ -11833,11 +11833,11 @@ img {
     top: 50%;
     left: 0;
     right: 0;
-    -webkit-transform: trans;
-    -moz-transform: trans;
-    -ms-transform: trans;
-    -o-transform: trans;
-    transform: trans; }
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%); }
 
 @media (min-width: 1500px) {
   .container {
