--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -699,6 +699,9 @@ img {
         top: calc(var(--image-height) + 70px);
         display: flex;
         justify-content: space-between;
+        --swiper-pagination-bullet-inactive-color: #404040;
+        --swiper-pagination-bullet-opacity: 1;
+        --swiper-pagination-color: #fff;
         @include before {
             content: "";
             height: 1px;
