--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -702,6 +702,7 @@ img {
         --swiper-pagination-bullet-inactive-color: #404040;
         --swiper-pagination-bullet-opacity: 1;
         --swiper-pagination-color: #fff;
+        --swiper-pagination-bullet-size: 22px;
         @include before {
             content: "";
             height: 1px;
