--- a/style.css
+++ b/style.css
@@ -11831,7 +11831,8 @@ img {
   justify-content: space-between;
   --swiper-pagination-bullet-inactive-color: #404040;
   --swiper-pagination-bullet-opacity: 1;
-  --swiper-pagination-color: #fff; }
+  --swiper-pagination-color: #fff;
+  --swiper-pagination-bullet-size: 22px; }
   .swiper-slider-timeline .swiper-pagination-style--timeline:before {
     content: "";
     height: 1px;
