--- a/style.css
+++ b/style.css
@@ -11830,6 +11830,7 @@ img {
   display: flex;
   justify-content: space-between;
   gap: 10px;
+  z-index: -1;
   --swiper-pagination-bullet-inactive-color: #404040;
   --swiper-pagination-bullet-opacity: 1;
   --swiper-pagination-color: #fff;
