--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -694,6 +694,9 @@ img {
     .wp-block-post-featured-image {
         margin-bottom: 150px;
     }
+    .swiper-pagination-navigation-style-2 {
+        
+    }
     .swiper-pagination-style--timeline {
         bottom: auto;
         top: calc(var(--image-height) + 70px);
