--- a/style.css
+++ b/style.css
@@ -12946,9 +12946,15 @@ body.sticky--header #masthead {
       background-color: var(--lightgray-2); }
 
 .listings--posts {
-  display: none;
-  overflow: hidden; }
+  height: 0;
+  overflow: hidden;
+  -webkit-transition: 500ms;
+  -moz-transition: 500ms;
+  -ms-transition: 500ms;
+  -o-transition: 500ms;
+  transition: 500ms; }
   .listings--posts.active {
+    height: var(--height);
     display: block; }
 
 .cover-style-1 .wp-block-cover__inner-container {
