--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -351,7 +351,7 @@ img {
     &.has-maroon-background-color {
         @include on-event {
             color: var(--bs-white) !important;
-            background-color: var(--bs-black);
+            background-color: var(--bs-black) !important;
         }
     }
 }
