--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -735,3 +735,10 @@ img {
         }
     }
 }
+
+.careers--category {
+    a {
+        pointer-events: none;
+        text-decoration: none;
+    }
+}
