--- a/style.css
+++ b/style.css
@@ -11859,6 +11859,10 @@ img {
     -o-transform: translateY(-50%);
     transform: translateY(-50%); }
 
+.careers--category a {
+  pointer-events: none;
+  text-decoration: none; }
+
 @media (min-width: 1500px) {
   .container {
     max-width: 1420px; } }
