--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -119,4 +119,9 @@ body {
             }
         }
     }
+    .offcanvas-body{
+        @include responsive(xs) {
+            overflow: auto !important;
+        }
+    }
 }
