--- a/style.css
+++ b/style.css
@@ -12744,6 +12744,8 @@ body.sticky--header #masthead {
 
 .header--navigation .nav-link:not(.active) + .tab-pane {
   display: none; }
+.header--navigation .nav-link + .tab-pane {
+  margin-top: 20px; }
 @media screen and (max-width: 767px) {
   .header--navigation .offcanvas-body {
     overflow: auto !important; } }
