--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -111,7 +111,7 @@ body {
     }
 }
 
-.header--navigation {
+.header--navigation.header--navigation.header--navigation {
     .nav-link {
         @include responsive(xs) {
             padding-left: 0;
