--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -135,6 +135,7 @@ body {
             &:not(.active) {
                 & + .tab-pane {
                     display: none;
+                    padding-bottom: 20px;
                 }
             }
 
