--- a/style.css
+++ b/style.css
@@ -12847,7 +12847,11 @@ body.sticky--header #masthead {
         .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form .wpsl-input {
           margin: 0; }
           .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form .wpsl-input input {
-            border-radius: 0; }
+            border-radius: 0;
+            width: 100% !important; }
+          @media screen and (max-width: 767px) {
+            .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form .wpsl-input > div {
+              width: 100%; } }
         .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form .wpsl-dropdown {
           width: auto;
           border-radius: 0; }
@@ -12855,7 +12859,9 @@ body.sticky--header #masthead {
           margin: 0; }
           @media screen and (max-width: 767px) {
             .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form .wpsl-select-wrap {
-              flex-direction: column; } }
+              flex-direction: column; }
+              .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form .wpsl-select-wrap > div {
+                width: 100%; } }
         .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form #wpsl-search-btn {
           background-color: var(--wp--preset--color--maroon) !important;
           background-image: none;
@@ -12865,6 +12871,9 @@ body.sticky--header #masthead {
           padding: 10px 20px; }
         .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form #wpsl-radius {
           margin: 0; }
+          @media screen and (max-width: 767px) {
+            .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form #wpsl-radius {
+              flex-direction: column; } }
   .dealer--locator--holder .dealer--locator #wpsl-wrap #wpsl-result-list {
     background-color: var(--wp--preset--color--lightgray-2);
     margin: 0;
