--- a/style.css
+++ b/style.css
@@ -12861,7 +12861,8 @@ body.sticky--header #masthead {
             .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form .wpsl-select-wrap {
               flex-direction: column; }
               .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form .wpsl-select-wrap > div {
-                width: 100%; } }
+                width: 100%;
+                flex-direction: column; } }
         .dealer--locator--holder .dealer--locator #wpsl-wrap .wpsl-search #wpsl-search-wrap form #wpsl-search-btn {
           background-color: var(--wp--preset--color--maroon) !important;
           background-image: none;
